unpackaged/main/default/objects/Contact/fields/Account_discarded_information__c.field-meta.xml
<CustomField>
    <fullName>Account_discarded_information__c</fullName>
    <formula>TEXT( Account.Discarded_Information__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account discarded information</label>
    <type>Text</type>
</CustomField>