unpackaged/main/default/objects/Contact/fields/Account_discarded_reason__c.field-meta.xml
<CustomField>
    <fullName>Account_discarded_reason__c</fullName>
    <formula>TEXT(Account.discarded_reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account discarded reason</label>
    <type>Text</type>
</CustomField>