unpackaged/main/default/objects/Contact/fields/Account_MQL_disc_reason__c.field-meta.xml
<CustomField>
    <fullName>Account_MQL_disc_reason__c</fullName>
    <formula>TEXT(Account.MQL_discarded_reason__c)</formula>
    <label>Account MQL disc reason</label>
    <type>Text</type>
</CustomField>