unpackaged/main/default/objects/Contact/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>For syncing back to Hubspot</description>
    <formula>Account.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>