unpackaged/main/default/objects/Contact/fields/Account_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Subscription_Start_Date__c</fullName>
    <description>Don&#39;t remove. Used for Hubspot Sync</description>
    <formula>Account.Subscription_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Subscription Start Date</label>
    <type>Date</type>
</CustomField>