unpackaged/main/default/objects/Contact/fields/Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Active_Customer__c</fullName>
    <formula>IF(CONTAINS(RecordType.DeveloperName, &#39;Customer&#39;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Customer?</label>
    <type>Checkbox</type>
</CustomField>