unpackaged/main/default/objects/Contact/fields/Actively_being_sequenced__c.field-meta.xml
<CustomField>
    <fullName>Actively_being_sequenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actively being sequenced</label>
    <type>Checkbox</type>
</CustomField>