unpackaged/main/default/objects/Contact/fields/Additional_Domain_Journey__c.field-meta.xml
<CustomField>
    <fullName>Additional_Domain_Journey__c</fullName>
    <label>Additional Domain Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Journey</valueSetName>
    </valueSet>
</CustomField>