unpackaged/main/default/objects/Contact/fields/AffiliateId__c.field-meta.xml
<CustomField>
    <fullName>AffiliateId__c</fullName>
    <formula>Account.AffiliateId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AffiliateId</label>
    <type>Text</type>
</CustomField>