unpackaged/main/default/objects/Contact/fields/Agency_Information_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Agency_Information_Incomplete__c</fullName>
    <formula>AND(
Account_Record_Type__c = &#39;partner&#39;,
Account.Is_Active_CC_Partner__c = true,
NOT(ISPICKVAL(Account.status__c, &#39;Discarded&#39;)),
NOT(ISPICKVAL(Account.status__c, &#39;Graveyard&#39;)),
OR(
ISBLANK(Account.PartnerPaymentBank__c),
ISBLANK(Account.PartnerPaymentIBAN__c),
ISBLANK(Account.Credit_Note_Recipient_Name__c),
ISBLANK(Account.vat_number__c),
ISBLANK(Account.BillingCity),
ISBLANK(Account.BillingCountry),
ISBLANK(Account.BillingPostalCode),
ISBLANK(Account.BillingStreet)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Information Incomplete</label>
    <type>Checkbox</type>
</CustomField>