unpackaged/main/default/objects/Contact/fields/assign_role_for_all_shops__c.field-meta.xml
<CustomField>
    <fullName>assign_role_for_all_shops__c</fullName>
    <label>Assign Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Contact</fullName>
            </value>
            <value>
                <fullName>Operationally Responsible</fullName>
            </value>
            <value>
                <fullName>Responsible for Buyer Protections</fullName>
            </value>
            <value>
                <fullName>Responsible for Purchasing</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>