unpackaged/main/default/objects/Contact/fields/Company_Is_Member__c.field-meta.xml
<CustomField>
    <fullName>Company_Is_Member__c</fullName>
    <formula>OR(Account.is_member__c, Account.RecordType.DeveloperName = &quot;Customer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Is Member</label>
    <type>Checkbox</type>
</CustomField>