unpackaged/main/default/objects/Contact/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <description>For Hubspot Sync</description>
    <formula>TEXT(Account.status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Status</label>
    <type>Text</type>
</CustomField>