unpackaged/main/default/objects/Contact/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <formula>FirstName + &quot; &quot; + LastName + &quot; (&quot; + Email +&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>