unpackaged/main/default/objects/Contact/fields/Contact_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Contact_Scoring__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Scoring</label>
    <referenceTo>Contact_Scoring__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>