unpackaged/main/default/objects/Contact/fields/Contact_type_for_HBS__c.field-meta.xml
<CustomField>
    <fullName>Contact_type_for_HBS__c</fullName>
    <formula>TEXT (Account.contact_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact type for HBS</label>
    <type>Text</type>
</CustomField>