unpackaged/main/default/objects/Contact/fields/creationDate__c.field-meta.xml
<CustomField>
    <fullName>creationDate__c</fullName>
    <label>Creation Date</label>
    <type>DateTime</type>
</CustomField>