unpackaged/main/default/objects/Contact/fields/Current_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Name__c</fullName>
    <label>Current Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>