unpackaged/main/default/objects/Contact/fields/Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Status__c</fullName>
    <label>Current Sequence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Called</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
                <isActive>false</isActive>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>No Reply</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Paused OOTO</fullName>
                <isActive>false</isActive>
                <label>Paused OOTO</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>