unpackaged/main/default/objects/Contact/fields/Current_Sequence_Step_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_No__c</fullName>
    <label>Current Sequence Step No</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>