unpackaged/main/default/objects/Contact/fields/Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_Type__c</fullName>
    <label>Current Sequence Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>auto_email</fullName>
                <label>Auto Email</label>
            </value>
            <value>
                <fullName>manual_email</fullName>
                <label>Manual Email</label>
            </value>
            <value>
                <fullName>call</fullName>
                <label>Phone Call</label>
            </value>
            <value>
                <fullName>task</fullName>
                <label>Generic Task</label>
            </value>
            <value>
                <fullName>linkedin_view_profile</fullName>
                <label>LinkedIn View Profile</label>
            </value>
            <value>
                <fullName>linkedin_connection_request</fullName>
                <label>LinkedIn Connection Request</label>
            </value>
            <value>
                <fullName>linkedin_send_message</fullName>
                <label>LinkedIn Send Message</label>
            </value>
            <value>
                <fullName>linkedin_interact_with_post</fullName>
                <label>LinkedIn interact with Post</label>
            </value>
            <value>
                <fullName>linkedin_other</fullName>
                <label>LinkedIn Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>