unpackaged/main/default/objects/Contact/fields/Current_Sequence_Stop__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PO-3724 - checkbox set to false to stop sequences in outreach</description>
    <label>Current Sequence Stop</label>
    <type>Checkbox</type>
</CustomField>