unpackaged/main/default/objects/Contact/fields/Current_Sequence_Task_due_date__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Task_due_date__c</fullName>
    <label>Current Sequence Task due date</label>
    <type>Date</type>
</CustomField>