unpackaged/main/default/objects/Contact/fields/Customer_Number_for_HBS__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_for_HBS__c</fullName>
    <formula>Account.customer_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number for HBS</label>
    <type>Text</type>
</CustomField>