unpackaged/main/default/objects/Contact/fields/DOI_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>DOI_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOI Confirmed</label>
    <type>Checkbox</type>
</CustomField>