unpackaged/main/default/objects/Contact/fields/DOI_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>DOI_Confirmed_Date__c</fullName>
    <label>DOI Confirmed Date</label>
    <type>DateTime</type>
</CustomField>