unpackaged/main/default/objects/Contact/fields/DOI_Source__c.field-meta.xml
<CustomField>
    <fullName>DOI_Source__c</fullName>
    <label>DOI Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>