unpackaged/main/default/objects/Contact/fields/Email_Link__c.field-meta.xml
<CustomField>
    <fullName>Email_Link__c</fullName>
    <formula>HYPERLINK(&quot;mailto://&quot;&amp;Email, Email, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Link</label>
    <type>Text</type>
</CustomField>