unpackaged/main/default/objects/Contact/fields/Fax_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Fax_Tariff__c</fullName>
    <label>Fax Tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>