unpackaged/main/default/objects/Contact/fields/Finished_Sequences__c.field-meta.xml
<CustomField>
    <fullName>Finished_Sequences__c</fullName>
    <label>Finished Sequences</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>