unpackaged/main/default/objects/Contact/fields/First_HC_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_HC_Visit_Date__c</fullName>
    <label>First HC Visit Date</label>
    <type>Date</type>
</CustomField>