unpackaged/main/default/objects/Contact/fields/Form_of_Address__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Address__c</fullName>
    <description>required by the MC; filled by the flow_contact_beforetrigger with first&amp;last name of the contact; logic includes exceptions for not filling the field;
based on https://tracker.trustedshops.com/browse/PO-6305.</description>
    <label>Form of Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>