unpackaged/main/default/objects/Contact/fields/Google_Integration_Journey__c.field-meta.xml
<CustomField>
    <fullName>Google_Integration_Journey__c</fullName>
    <label>Google Integration Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Journey</valueSetName>
    </valueSet>
</CustomField>