unpackaged/main/default/objects/Contact/fields/has_Review_Rights__c.field-meta.xml
<CustomField>
    <fullName>has_Review_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has Review Rights</label>
    <type>Checkbox</type>
</CustomField>