unpackaged/main/default/objects/Contact/fields/Inbound_type_for_HBS__c.field-meta.xml
<CustomField>
    <fullName>Inbound_type_for_HBS__c</fullName>
    <formula>TEXT (Account.Inbound_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inbound type for HBS</label>
    <type>Text</type>
</CustomField>