unpackaged/main/default/objects/Contact/fields/Initial_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sequence_Name__c</fullName>
    <label>Initial Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>