unpackaged/main/default/objects/Contact/fields/is_Retention_Contact__c.field-meta.xml
<CustomField>
    <fullName>is_Retention_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Retention Contact</label>
    <type>Checkbox</type>
</CustomField>