unpackaged/main/default/objects/Contact/fields/IsCommunityPartner__c.field-meta.xml
<CustomField>
    <fullName>IsCommunityPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCommunityPartner</label>
    <type>Checkbox</type>
</CustomField>