unpackaged/main/default/objects/Contact/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>pl</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <label>Portuguese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>