unpackaged/main/default/objects/Contact/fields/Last_HC_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_HC_Visit_Date__c</fullName>
    <label>Last HC Visit Date</label>
    <type>Date</type>
</CustomField>