unpackaged/main/default/objects/Contact/fields/Last_modified_for_sync_HBS__c.field-meta.xml
<CustomField>
    <fullName>Last_modified_for_sync_HBS__c</fullName>
    <description>date time field to get a change in SF and start the sync back into Hubspot</description>
    <label>Last modified for sync HBS</label>
    <type>DateTime</type>
</CustomField>