unpackaged/main/default/objects/Contact/fields/Last_Review_Invite__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Invite__c</fullName>
    <description>Date of last sent review invite, set by PB_Case_CSM_CSAT</description>
    <label>Last Review Invite</label>
    <type>Date</type>
</CustomField>