unpackaged/main/default/objects/Contact/fields/Last_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Last_Sequence__c</fullName>
    <label>Last Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>