unpackaged/main/default/objects/Contact/fields/Last_Sequence_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sequence_Change_Date__c</fullName>
    <description>PO-3724 - used to track the date when the current sequence field changes</description>
    <label>Last Sequence Change Date</label>
    <type>DateTime</type>
</CustomField>