unpackaged/main/default/objects/Contact/fields/Left_the_company__c.field-meta.xml
<CustomField>
    <fullName>Left_the_company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>informaton to not use this contact any more</description>
    <inlineHelpText>only if the person is not working in the company any more</inlineHelpText>
    <label>Left the company</label>
    <type>Checkbox</type>
</CustomField>