unpackaged/main/default/objects/Contact/fields/Legal_Matelso_gclid__c.field-meta.xml
<CustomField>
    <fullName>Legal_Matelso_gclid__c</fullName>
    <label>Legal Matelso gclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>