unpackaged/main/default/objects/Contact/fields/Legal_Sales_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Legal_Sales_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>will be filled depending on Legal Sales Responsible field on Account</description>
    <label>Legal Sales Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>