unpackaged/main/default/objects/Contact/fields/Local_Reviews_Journey__c.field-meta.xml
<CustomField>
    <fullName>Local_Reviews_Journey__c</fullName>
    <label>Local Reviews Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Journey</valueSetName>
    </valueSet>
</CustomField>