unpackaged/main/default/objects/Contact/fields/login__c.field-meta.xml
<CustomField>
    <fullName>login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Login to MyTS</label>
    <type>Checkbox</type>
</CustomField>