unpackaged/main/default/objects/Contact/fields/Marketing_Upgrade_Token__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Upgrade_Token__c</fullName>
    <formula>IF(  ISBLANK(upgrade_token__c ) ,  Account.contact__r.upgrade_token__c , upgrade_token__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Upgrade Token</label>
    <type>Text</type>
</CustomField>