unpackaged/main/default/objects/Contact/fields/MC_Survey_Trigger__c.field-meta.xml
<CustomField>
    <fullName>MC_Survey_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger for Marketing Cloud Batch Mailings triggerd by Survey invite creation</description>
    <label>MC Survey Trigger</label>
    <type>Checkbox</type>
</CustomField>