unpackaged/main/default/objects/Contact/fields/MC_Test__c.field-meta.xml
<CustomField>
    <fullName>MC_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Test</label>
    <type>Checkbox</type>
</CustomField>