unpackaged/main/default/objects/Contact/fields/migration_run__c.field-meta.xml
<CustomField>
    <fullName>migration_run__c</fullName>
    <label>Migration run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>