unpackaged/main/default/objects/Contact/fields/MQL_contact__c.field-meta.xml
<CustomField>
    <fullName>MQL_contact__c</fullName>
    <formula>Account.MQL_contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL contact</label>
    <type>Checkbox</type>
</CustomField>