unpackaged/main/default/objects/Contact/fields/MyTS_Username__c.field-meta.xml
<CustomField>
    <fullName>MyTS_Username__c</fullName>
    <label>MyTS Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>