unpackaged/main/default/objects/Contact/fields/Name_of_currently_active_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Name_of_currently_active_Sequence__c</fullName>
    <label>Name of currently active Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>