unpackaged/main/default/objects/Contact/fields/Number_of_active_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_active_Tasks__c</fullName>
    <label>Number of active Tasks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>