unpackaged/main/default/objects/Contact/fields/Number_of_HC_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_HC_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of HC Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>