unpackaged/main/default/objects/Contact/fields/Owner_Name_For_Hbs__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_For_Hbs__c</fullName>
    <formula>Account.Owner.FirstName + &#39; &#39; + Account.Owner.LastName</formula>
    <label>Owner Name For HBS</label>
    <type>Text</type>
</CustomField>