unpackaged/main/default/objects/Contact/fields/ParterCampaign__c.field-meta.xml
<CustomField>
    <fullName>ParterCampaign__c</fullName>
    <formula>TEXT(Account.PartnerCampaign__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParterCampaign</label>
    <type>Text</type>
</CustomField>