unpackaged/main/default/objects/Contact/fields/Participation_Trust_Panel__c.field-meta.xml
<CustomField>
    <fullName>Participation_Trust_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked on, the customer is available for surveys</description>
    <label>Participation Trust Panel</label>
    <type>Checkbox</type>
</CustomField>