unpackaged/main/default/objects/Contact/fields/Partner_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accepted_Date__c</fullName>
    <formula>IF( IsCommunityPartner__c , BLANKVALUE(Account.PartnerAcceptDate__c, CreatedDate), NULL)</formula>
    <label>Partner Accepted Date</label>
    <type>DateTime</type>
</CustomField>