unpackaged/main/default/objects/Contact/fields/Partner_Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approved_At__c</fullName>
    <label>Partner Approved At</label>
    <type>DateTime</type>
</CustomField>