unpackaged/main/default/objects/Contact/fields/Partner_status__c.field-meta.xml
<CustomField>
    <fullName>Partner_status__c</fullName>
    <formula>TEXT(Account.partner_status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner status</label>
    <type>Text</type>
</CustomField>