unpackaged/main/default/objects/Contact/fields/Partner_Status_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status_Migrated__c</fullName>
    <label>Partner Status Migrated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>