unpackaged/main/default/objects/Contact/fields/PartnerCommunityUser__c.field-meta.xml
<CustomField>
    <fullName>PartnerCommunityUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartnerCommunityUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PartnerContacts</relationshipName>
    <type>Lookup</type>
</CustomField>