unpackaged/main/default/objects/Contact/fields/PartnerCommunityUser_Username__c.field-meta.xml
<CustomField>
    <fullName>PartnerCommunityUser_Username__c</fullName>
    <formula>PartnerCommunityUser__r.Username</formula>
    <label>PartnerCommunityUser Username</label>
    <type>Text</type>
</CustomField>