unpackaged/main/default/objects/Contact/fields/Phone_Link_Other__c.field-meta.xml
<CustomField>
    <fullName>Phone_Link_Other__c</fullName>
    <formula>HYPERLINK(&quot;tel://&quot;&amp;OtherPhone, OtherPhone, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Second phone number.</inlineHelpText>
    <label>Phone Link Other</label>
    <type>Text</type>
</CustomField>