unpackaged/main/default/objects/Contact/fields/Phone_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Phone_Tariff__c</fullName>
    <label>Phone Tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>