unpackaged/main/default/objects/Contact/fields/PhoneLink__c.field-meta.xml
<CustomField>
    <fullName>PhoneLink__c</fullName>
    <formula>IF( 
  DoNotCall = TRUE, 
  IMAGE(&#39;/resource/do_not_call_image&#39;, &#39;DO NOT CALL&#39;, 42, 42), 
  HYPERLINK(&quot;tel://&quot;&amp;Phone, Phone, &quot;_self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PhoneLink</label>
    <type>Text</type>
</CustomField>