unpackaged/main/default/objects/Contact/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>