unpackaged/main/default/objects/Contact/fields/primary_contact__c.field-meta.xml
<CustomField>
    <fullName>primary_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>