unpackaged/main/default/objects/Contact/fields/ProductScore_AdditionalDomain__c.field-meta.xml
<CustomField>
    <fullName>ProductScore_AdditionalDomain__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ProductScore AdditionalDomain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>