unpackaged/main/default/objects/Contact/fields/ProductScore_ASP__c.field-meta.xml
<CustomField>
    <fullName>ProductScore_ASP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ProductScore ASP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>