unpackaged/main/default/objects/Contact/fields/ProductScore_ProductReviews__c.field-meta.xml
<CustomField>
    <fullName>ProductScore_ProductReviews__c</fullName>
    <label>ProductScore ProductReviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>