unpackaged/main/default/objects/Contact/fields/ProductScore_ReputationManager__c.field-meta.xml
<CustomField>
    <fullName>ProductScore_ReputationManager__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ProductScore ReputationManager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>