unpackaged/main/default/objects/Contact/fields/ProductScore_SmartReviewAssistant__c.field-meta.xml
<CustomField>
    <fullName>ProductScore_SmartReviewAssistant__c</fullName>
    <description>The data is pushed from Tealium to salesforce and an opportunity will be created once it reaches a particular score based on customer interaction. https://tracker.trustedshops.com/browse/PO-6724</description>
    <label>ProductScore SmartReviewAssistant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>