unpackaged/main/default/objects/Contact/fields/ProductScore_Trustmark__c.field-meta.xml
<CustomField>
    <fullName>ProductScore_Trustmark__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ProductScore Trustmark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>