unpackaged/main/default/objects/Contact/fields/Qualification_date_Lead_Management__c.field-meta.xml
<CustomField>
    <fullName>Qualification_date_Lead_Management__c</fullName>
    <description>When the account was qualified by the lead management (new or mql accounts). This field is updated from the Parent Account Object via Automated Process</description>
    <label>Qualification date Lead Management</label>
    <type>DateTime</type>
</CustomField>