unpackaged/main/default/objects/Contact/fields/Salesloft_status__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_status__c</fullName>
    <description>for Enterprise purposes, working with Salesloft</description>
    <label>Salesloft status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Marketing/ Nurtured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>