unpackaged/main/default/objects/Contact/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold / Not started</fullName>
            </value>
            <value>
                <fullName>Approaching</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Do not contact</fullName>
            </value>
            <value>
                <fullName>Bad contact info</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>